[gd_scene load_steps=4 format=3 uid="uid://buhdlqm1pdfq3"]

[ext_resource type="Script" uid="uid://tpugkujh3m52" path="res://scripts/enemy_arrow.gd" id="1_gaww0"]
[ext_resource type="Texture2D" uid="uid://db6i2jxdbmbna" path="res://assets/sprites/Units/Blue Units/Archer/Arrow.png" id="2_b4gx2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7ckq1"]
radius = 16.0
height = 55.999996

[node name="EnemyArrow" type="Area2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_gaww0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(13.333336, 5.684342e-14)
texture = ExtResource("2_b4gx2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, -5.6843415e-15)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_7ckq1")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(8, 0)
rect = Rect2(-10, -16, 10, 32)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
